Everything works for extension except security error in posting loan
